<resources>
    <string name="app_name">DicodingStory</string>
    <string name="welcome_to_story_app">Welcome To Story App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="logout_meesage">Sure You Wanna Logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="retry">Coba Lagi</string>
    <string name="tuliskan_deskripsi_foto">Tuliskan Deskripsi Foto</string>
    <string name="upload_story">Upload Story</string>
    <string name="empty_image_warning">Gambar Tidak Terpilih</string>
    <string name="create_account">Create Account</string>
    <string name="nama">Nama</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now"> Sign up now</string>
    <string name="register">Register</string>
</resources>